apps/mailu/ingress-internal.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailu-internal
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: root-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-mail-chain@kubernetescrd
    traefik.ingress.kubernetes.io/forwarded-headers-trusted-ip: "0.0.0.0/0"
spec:
  rules:
  - host: mail.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mailu-front
            port:
              number: 80
  tls:
  - hosts:
    - mail.home
    secretName: mailu-internal-tls
